Update final documents

--- a/GymPav.ipynb
+++ b/GymPav.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Irina Viner-Usmanova Rhythmic Gymnastics Centre"
+    "# Irina Viner-Usmanova Rhythmic Gymnastics Pavilion"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The project presented in this notebook is an adaptation of the Irina Viner-Usmanova Rhythmic Gymnastics Centre, originally designed by CPU Pride for Moscow, Russia. Its most prominent feature is the wavy roof-structure, inspired by the movement of a rhythmic gymnastic’s strip. The program elaborated here is a personal interpretation of the original design, developed in a 5 day collaborative sprint. This notebook uses the __Julia__ programming language and the __Khepri__ algorithmic design tool to model the building's geometry."
+    "The project presented in this notebook is an adaptation of the Irina Viner-Usmanova Rhythmic Gymnastics Pavilion, originally designed by CPU Pride for Moscow, Russia. Its most prominent feature is the wavy roof-structure, inspired by the movement of a rhythmic gymnastic’s strip. The program elaborated here is a personal interpretation of the original design, developed in a 5 day collaborative sprint. This notebook uses the __Julia__ programming language and the __Khepri__ algorithmic design tool to model the building's geometry."
    ]
   },
   {
@@ -3501,7 +3501,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.4.2",
+   "display_name": "Julia 1.4.1",
    "language": "julia",
    "name": "julia-1.4"
   },
@@ -3509,7 +3509,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.4.2"
+   "version": "1.4.1"
   },
   "toc": {
    "base_numbering": 1,
